@@ -28,13 +28,13 @@ import org.apache.commons.cli.HelpFormatter;
 import org.apache.commons.cli.OptionBuilder;
 import org.apache.commons.cli.Options;
 import org.apache.commons.cli.ParseException;
-import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.httpclient.HttpStatus;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.lang.ArrayUtils;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringEscapeUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpEntity;
 import org.apache.http.HttpResponse;
 import org.apache.http.NameValuePair;
@@ -44,18 +44,15 @@ import org.apache.http.client.entity.UrlEncodedFormEntity;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.cookie.Cookie;
-import org.apache.http.entity.mime.MultipartEntity;
+import org.apache.http.entity.mime.MultipartEntityBuilder;
 import org.apache.http.entity.mime.content.FileBody;
-import org.apache.http.entity.mime.content.StringBody;
 import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.message.BasicNameValuePair;
-import org.apache.http.protocol.HTTP;
 import org.apache.http.util.EntityUtils;
 import org.apache.log4j.ConsoleAppender;
 import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
 import org.apache.log4j.PatternLayout;
-import org.tdar.core.bean.resource.InformationResourceFile.FileAccessRestriction;
 
 /**
  * http://thegenomefactory.blogspot.com.au/2013/08/minimum-standards-for-bioinformatics.html
@@ -64,13 +61,10 @@ import org.tdar.core.bean.resource.InformationResourceFile.FileAccessRestriction
  */
 public class CommandLineAPITool {
 
+    private static final String UTF_8 = "UTF-8";
     // The following are the names of the fields on the APIController that we set
     /** Set in the query. Not really needed. */
     private static final String API_UPLOADED_ITEM = "uploadedItem";
-    /** The access restrictions that is to be applied to the uploaded files */
-    private static final String API_FIELD_FILE_ACCESS_RESTRICTION = "fileAccessRestriction";
-    /** The list of files that are to have the access restriction applied to them */
-    private static final String API_FIELD_RESTRICTED_FILES = "restrictedFiles";
     /** The list of attachment files */
     private static final String API_FIELD_UPLOAD_FILE = "uploadFile";
     /** The meta-data describing the files, an xml file itself, adhering to the published schema */
@@ -100,7 +94,6 @@ public class CommandLineAPITool {
     private static final String OPTION_ACCOUNTID = "accountid";
     private static final String OPTION_SLEEP = "sleep";
     private static final String OPTION_PROJECT_ID = "projectid";
-    private static final String OPTION_ACCESS_RESTRICTION = API_FIELD_FILE_ACCESS_RESTRICTION;
     private static final String ALPHA_TDAR_ORG = "alpha.tdar.org";
     @SuppressWarnings("unused")
     private static final String CORE_TDAR_ORG = "core.tdar.org";
@@ -118,7 +111,6 @@ public class CommandLineAPITool {
     private Long projectId;
     private Long accountId;
     private long msSleepBetween;
-    private FileAccessRestriction fileAccessRestriction = FileAccessRestriction.PUBLIC;
     private List<String> seen = new ArrayList<>();
     private String httpProtocol = HTTPS_PROTOCOL;
     private File[] files;
@@ -137,7 +129,7 @@ public class CommandLineAPITool {
     public static void main(String[] args) throws IOException {
         CommandLineAPITool importer = new CommandLineAPITool();
         importer.seenFile = File.createTempFile(IMPORT_SEEN_FILE, IMPORT_SEEN_FILE_EXTENSION);
-        logger.warn("Seen file is: "+ importer.seenFile.getCanonicalPath());
+        logger.warn("Seen file is: " + importer.seenFile.getCanonicalPath());
         Options options = buildCommandLineOptions();
         try {
             parseArguments(args, importer, options);
@@ -196,9 +188,6 @@ public class CommandLineAPITool {
         if (line.hasOption(OPTION_SLEEP)) {
             importer.setMsSleepBetween(getAsLong(line.getOptionValue(OPTION_SLEEP)));
         }
-        if (line.hasOption(OPTION_ACCESS_RESTRICTION)) {
-            importer.setFileAccessRestriction(FileAccessRestriction.valueOf(line.getOptionValue(OPTION_ACCESS_RESTRICTION)));
-        }
         if (line.hasOption(OPTION_SEEN_FILE)) {
             importer.setSeenFile(line.getOptionValue(OPTION_SEEN_FILE));
         }
@@ -230,9 +219,6 @@ public class CommandLineAPITool {
         options.addOption(OptionBuilder.withArgName(OPTION_SEEN_FILE).hasArg()
                 .withDescription("the name of the file to record successful file tranfers to (defaults to " + IMPORT_SEEN_FILE + ")")
                 .create(OPTION_SEEN_FILE));
-        options.addOption(OptionBuilder.withArgName(OPTION_ACCESS_RESTRICTION).hasArg()
-                .withDescription("the access restriction to be applied - one of [" + getFileAccessRestrictionChoices() + "]")
-                .create(OPTION_ACCESS_RESTRICTION));
         return options;
     }
 
@@ -265,9 +251,6 @@ public class CommandLineAPITool {
                 case OPTION_SEEN_FILE:
                     importer.setSeenFile(property);
                     break;
-                case OPTION_ACCESS_RESTRICTION:
-                    importer.setFileAccessRestriction(FileAccessRestriction.valueOf(property));
-                    break;
                 case OPTION_FILE:
                     importer.setFiles(property.split(","));
                     break;
@@ -288,18 +271,6 @@ public class CommandLineAPITool {
         console.setWriter(new OutputStreamWriter(System.out));
         logger.setLevel(Level.INFO);
         logger.addAppender(console);
-    }
-
-    private static String getFileAccessRestrictionChoices() {
-        String result = "";
-        FileAccessRestriction[] values = FileAccessRestriction.values();
-        for (int i = 1; i <= values.length; i++) {
-            result = result + values[i - 1];
-            if (i < values.length) {
-                result = result + " | ";
-            }
-        }
-        return result;
     }
 
     private static boolean hasNoOptions(CommandLine line) {
@@ -368,15 +339,15 @@ public class CommandLineAPITool {
                 logger.debug(tdarIPAuth.getRequestLine());
                 HttpResponse response = httpclient.execute(tdarIPAuth);
                 HttpEntity entity = response.getEntity();
-                entity.consumeContent();
+                EntityUtils.consume(entity);
             }
             // make tdar authentication call
-            HttpPost tdarAuth = new HttpPost(httpProtocol + getHostname() + "/login/process");
+            HttpPost tdarAuth = new HttpPost(httpProtocol + getHostname() + "/api/login");
             List<NameValuePair> postNameValuePairs = new ArrayList<>();
-            postNameValuePairs.add(new BasicNameValuePair("loginUsername", getUsername()));
-            postNameValuePairs.add(new BasicNameValuePair("loginPassword", getPassword()));
+            postNameValuePairs.add(new BasicNameValuePair("userLogin.loginUsername", getUsername()));
+            postNameValuePairs.add(new BasicNameValuePair("userLogin.loginPassword", getPassword()));
 
-            tdarAuth.setEntity(new UrlEncodedFormEntity(postNameValuePairs, HTTP.UTF_8));
+            tdarAuth.setEntity(new UrlEncodedFormEntity(postNameValuePairs, UTF_8));
             HttpResponse response = httpclient.execute(tdarAuth);
             HttpEntity entity = response.getEntity();
             logger.trace("Login form get: " + response.getStatusLine());
@@ -388,8 +359,8 @@ public class CommandLineAPITool {
             } else {
                 for (int i = 0; i < cookies.size(); i++) {
                     if (cookies.get(i).getName().equals("crowd.token_key")) {
-						sawCrowdAuth = true;
-					}
+                        sawCrowdAuth = true;
+                    }
                     logger.trace("- " + cookies.get(i).toString());
                 }
             }
@@ -399,7 +370,7 @@ public class CommandLineAPITool {
                 exit(-1);
             }
             logger.trace(EntityUtils.toString(entity));
-            entity.consumeContent();
+            EntityUtils.consume(entity);
 
             for (File file : files) {
                 out.print("*"); // give the user some sort of visual indicator as to progress
@@ -466,35 +437,30 @@ public class CommandLineAPITool {
         boolean callSuccessful = true;
         String path = record.getPath();
         try {
-            HttpPost apicall = new HttpPost(httpProtocol + getHostname() + "/api/upload?" + API_UPLOADED_ITEM + "="
-                    + URLEncoder.encode(path, "UTF-8"));
-            MultipartEntity reqEntity = new MultipartEntity();
+            String uri = String.format("%s%s/api/ingest/upload?%s=%s", httpProtocol, getHostname(), API_UPLOADED_ITEM, URLEncoder.encode(path, UTF_8));
+            HttpPost apicall = new HttpPost(uri);
+            MultipartEntityBuilder builder = MultipartEntityBuilder.create();
             if (seen.contains(path)) {
                 logger.warn("skipping: " + path);
             }
-            reqEntity.addPart(API_FIELD_RECORD, new StringBody(FileUtils.readFileToString(record)));
+            builder.addTextBody(API_FIELD_RECORD, FileUtils.readFileToString(record));
 
             if (projectId != null) {
                 logger.trace("setting " + API_FIELD_PROJECT_ID + ":" + projectId);
-                reqEntity.addPart(API_FIELD_PROJECT_ID, new StringBody(projectId.toString()));
+                builder.addTextBody(API_FIELD_PROJECT_ID, projectId.toString());
             }
             if (accountId != null) {
                 logger.trace("setting " + API_FIELD_ACCOUNT_ID + ":" + accountId);
-                reqEntity.addPart(API_FIELD_ACCOUNT_ID, new StringBody(accountId.toString()));
+                builder.addTextBody(API_FIELD_ACCOUNT_ID, accountId.toString());
             }
-
-            reqEntity.addPart(API_FIELD_FILE_ACCESS_RESTRICTION, new StringBody(getFileAccessRestriction().name()));
 
             if (!CollectionUtils.isEmpty(attachments)) {
                 for (int i = 0; i < attachments.size(); i++) {
-                    reqEntity.addPart(API_FIELD_UPLOAD_FILE, new FileBody(attachments.get(i)));
-                    if (getFileAccessRestriction().isRestricted()) {
-                        reqEntity.addPart(API_FIELD_RESTRICTED_FILES, new StringBody(attachments.get(i).getName()));
-                    }
+                    builder.addPart(API_FIELD_UPLOAD_FILE, new FileBody(attachments.get(i)));
                 }
             }
 
-            apicall.setEntity(reqEntity);
+            apicall.setEntity(builder.build());
             logger.debug("      files: " + StringUtils.join(attachments, ", "));
 
             HttpResponse response = httpclient.execute(apicall);
@@ -513,7 +479,7 @@ public class CommandLineAPITool {
             HttpEntity entity = response.getEntity();
             if (entity != null) {
                 String resp = StringEscapeUtils.unescapeHtml4(EntityUtils.toString(entity));
-                entity.consumeContent();
+                EntityUtils.consume(entity);
                 if (StringUtils.isNotBlank(resp)) {
                     logger.info(resp);
                 }
@@ -534,7 +500,7 @@ public class CommandLineAPITool {
         } catch (Exception e) {
             // we want to suppress all exceptions that might stop the next file from being imported
             logger.error("couldn't import: " + path, e);
-    	}
+        }
         return callSuccessful;
     }
 
@@ -604,14 +570,6 @@ public class CommandLineAPITool {
 
     public void setSeen(List<String> seen) {
         this.seen = seen;
-    }
-
-    public FileAccessRestriction getFileAccessRestriction() {
-        return fileAccessRestriction;
-    }
-
-    public void setFileAccessRestriction(FileAccessRestriction fileAccessRestriction) {
-        this.fileAccessRestriction = fileAccessRestriction;
     }
 
     /**
